--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,15 +19,15 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-          cache: npm
-      - run: npm ci
+          node-version: 18
+          cache: pnpm
+      - run: pnpm ci
       - name: Build
-        run: npm run docs:build
+        run: pnpm run docs:build
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
         with:
-          path: .vitepress/dist #注意这里
+          path: docs/.vitepress/dist #注意这里
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v1
