--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,15 +34,17 @@ jobs:
           fetch-depth: 0 # Not needed if lastUpdated is not enabled
       # - uses: pnpm/action-setup@v2 # Uncomment this if you're using pnpm
       # - uses: oven-sh/setup-bun@v1 # Uncomment this if you're using Bun
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+      - name: Install dependencies
+        run: pnpm install # or pnpm install / yarn install / bun install
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 20
           cache: pnpm # or pnpm / yarn
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Install dependencies
-        run: pnpm ci # or pnpm install / yarn install / bun install
       - name: Build with VitePress
         run: |
           pnpm run docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build
