--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,23 +32,28 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Not needed if lastUpdated is not enabled
-      # - uses: pnpm/action-setup@v2 # Uncomment this if you're using pnpm
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2 # Uncomment this if you're using pnpm
       # - uses: oven-sh/setup-bun@v1 # Uncomment this if you're using Bun
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
+
       - name: Install dependencies
         run: pnpm install # or pnpm install / yarn install / bun install
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 20
           cache: pnpm # or pnpm / yarn
+
       - name: Build with VitePress
         run: |
           pnpm run docs:build # or pnpm docs:build / yarn docs:build / bun run docs:build
           touch docs/.vitepress/dist/.nojekyll
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
